--- a/style.css
+++ b/style.css
@@ -127,7 +127,20 @@ input[type="file"] {
     background-color: #0056b3;
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .thumbnail {
+    animation: fadeIn 0.5s ease-in-out;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -139,6 +152,7 @@ input[type="file"] {
     overflow: hidden;
     transition: transform 0.3s, border-color 0.3s;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .thumbnail:hover {
@@ -146,9 +160,9 @@ input[type="file"] {
 }
 
 .thumbnail img {
-    width: 300px;
-    height: 400px;
-    object-fit: cover;
+    width: 360px;
+    height: 360px;
+    object-fit: contain;
 }
 
 .thumbnail label {
