--- a/style.css
+++ b/style.css
@@ -160,9 +160,19 @@ input[type="file"] {
 }
 
 .thumbnail img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.thumbnail.aspect-1-1 img {
     width: 360px;
     height: 360px;
-    object-fit: contain;
+}
+
+.thumbnail.aspect-3-4 img {
+    width: 270px;
+    height: 360px;
 }
 
 .thumbnail label {
@@ -174,6 +184,21 @@ input[type="file"] {
 
 .thumbnail.selected {
     border-color: #007bff;
+}
+
+.aspect-ratio-selection {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.aspect-ratio-selection label {
+    margin-right: 10px;
+}
+
+.aspect-ratio-selection select {
+    padding: 5px;
+    font-size: 16px;
+    border-radius: 4px;
 }
 
 #thumbnails-container {
